# min-vulkan-template

./: .gitignore  Cargo.toml  README.md
src/: app.rs  main.rs
src/common/: mod.rs  vulkan.rs
